# min-snr

./: .gitignore  .gitmodules  README.md  environment.md  pyproject.toml  reproducibility.md
configs/base/: ddpm_cifar32_linear_50k.yaml
configs/study/MS1_min_snr/: e1_baseline_linear.yaml
configs/study/MS1_min_snr/e1/: e1_baseline_linear.yaml  e1_smoke_linear.yaml
docs/: project_charter_min_snr.md
docs/experiments/: _prereg_template.md  index.md
docs/experiments/e1/: e1_pre_reg.md  e1_prereg.md  e1_results.md
docs/experiments/e2/: e2_prereg.md  e2_results.md
docs/experiments/e3/: e3_prereg.md  e3_results.md
docs/experiments/e4/: e4_prereg.md  e4_results.md
docs/experiments/e5/: e5_prereg.md  e5_results.md
docs/experiments/e6/: e6_prereg.md  e6_results.md
docs/experiments/e7/: e7_prereg.md  e7_results.md
docs/experiments/e8/: e8_prereg.md  e8_results.md
docs/experiments/e9/: e9_prereg.md  e9_results.md
scripts/: run_e1_baseline.sh  run_e2_minsnr.sh
stats/: fid_noise_baseline.jsonl
tests/: test_cli_smoke.py  test_minsnr_schedule_shape.py
tools/: fid_noise_baseline.py  plot_grad_stats.py  plot_loss_fid.py  plot_per_t_mse_profile.py  plot_walltime_fid.py
tools/grids/: make_sample_grid_comparison.py
tools/hutchinson/: plot_curvature.py  plot_curvature_overlay.py  plot_curvature_vs_fid.py
tools/minsnr/: plot_e8_step_curves.py  plot_minsnr_diagnostics.py  plot_minsnr_weights.py
tools/minsnr/curves/: plot_e8_effective_loss_vs_t.py  plot_e8_snr_geometry.py  plot_e8_step_curves.py  plot_e8_weight_curves.py
(+40 files in other folders)
